# Proxel

./: .gitignore  CMakeLists.txt  Proxel.sln  README.md  xmake.lua
Proxel/: Program.cs  Proxel.csproj
Proxel.Common/Enums/: ProtocolVersion.cs
Proxel.Common/Structs/: Packet.cs  Player.cs  PlayerConnectionInfo.cs  Version.cs
Proxel.Config/: CommentAttribute.cs  Config.cs  ConfigBase.cs  ConfigSerializer.cs  Proxel.Config.csproj
Proxel.Log4Console/: Log.cs
Proxel.Log4Console/Enums/: LogType.cs  SaveLogs.cs
Proxel.PluginAPI/: Proxel.PluginAPI.csproj
Proxel.PluginAPI/Features/: IPluginInformation.cs
Proxel.PluginAPI/Loader/: PluginLoader.cs
Proxel.Protocol/: GuidConverter.cs  McCryptography.cs  McPacket.cs  Proxel.Protocol.csproj
Proxel.Protocol/Enums/: ProtocolVersion.cs
Proxel.Protocol/Helpers/: FieldReader.cs  McCryptography.cs  PacketBuilder.cs  PacketReader.cs  PacketUtils.cs  PacketWriter.cs  StatusBuilder.cs  StreamExtensions.cs  TextBuilder.cs  VarInt.cs
Proxel.Protocol/Networking/Utils/: NetworkStreamDisposer.cs  PacketBuilder.cs  PacketReader.cs  PacketWriter.cs  ProtocolVersionUtils.cs
Proxel.Protocol/Packets/: Packet.cs
Proxel.Protocol/Packets/Utils/: PacketBuilder.cs  PacketWriter.cs  ProtocolVersionUtils.cs
Proxel.Protocol/Server/: ClientHandler.cs  HandshakeHandler.cs  LoginHandler.cs  Server.cs  StatusHandler.cs  TcpClientHandler.cs
Proxel.Protocol/Server/Config/: TcpClientConfig.cs
Proxel.Protocol/Structs/: Packet.cs  Player.cs
Proxel.Protocol/Types/: Packet.cs  PacketBool.cs  PacketString.cs  VarInt.cs  VarLong.cs
src/: Config.cpp  Config.hpp  ConfigHandler.cpp  ConfigHandler.hpp  Log.cpp  Log.hpp  main.cpp
